--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,6 +11,7 @@ add_executable(${PROJECT_NAME}
   src/board.cc
   src/piece.cc
   src/piece_display.cc
+  src/input_handler.cc
 )
 
 target_link_libraries(${PROJECT_NAME} sfml-graphics sfml-window sfml-system)
